# mgp_trickteam

./: .gitmodules  CMakeLists.txt  README.md  plugin_meta.json
src/: frontend.cpp  frontend.h  frontend_plugin.c  game.cpp  game.h  game_plugin.c  static_version.cpp
